# ma-uncertainty-scripts

./: .gitignore  assess.py  assess.sh  assessment.ipynb  clean.py  downstream.py  evaluation.ipynb  main.py  prepare.sh  prepare_dismis.py  pyproject.toml  regression.ipynb  regressor.py  requirements.txt  scratchpad.py  sync-completeness.zsh  visualization.ipynb
src/: assessment.py  constants.py  evaluation.py  utils.py
src/classifier/: gradient_boosting.py
src/cleaning/: auto_sales.py  movies.py  open_library.py  weather.py
src/downstream_task/: auto_sales_prediction.py  config.py  movies_prediction.py  plots.py  utils.py  weather_rain_prediction.py
src/evaluation/: aggregation.py  evaluation.py  types.py
src/validation/: dates.py  numbers.py  strings.py
