[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nltk==3.9.2",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pycountry>=24.6.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy==2.0.44",
    "tabulate>=0.9.0",
    "tqdm>=4.67.2",
]
