[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasketch>=1.9.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nltk==3.9.2",
    "numba>=0.65.0",
    "openai>=2.31.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pycountry>=24.6.1",
    "pyod>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sqlalchemy==2.0.44",
    "tabulate>=0.9.0",
    "tqdm>=4.67.2",
    "xgboost>=3.2.0",
]
